Last commit before release

--- a/templates/partials/base.html.twig
+++ b/templates/partials/base.html.twig
@@ -85,6 +85,11 @@
 
     </div>
 
+    
+    {% block footer %}
+        {% include 'partials/footer.html.twig' %}
+    {% endblock %}
+
     {% block mobile %}
     <div class="mobile-container">
         <div class="overlay" id="overlay">
