--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -1,5 +1,5 @@
 <section id="footer" class="section bg-gray">
     <section class="container {{ grid_size }}">
-        <p><a href="http://getgrav.org">Grav</a> was <i class="fa fa-code"></i> with <i class="fa fa-heart-o pulse "></i> by <a href="https://trilby.media">Trilby Media</a>.</p>
+        <p>Skapat av <a href="mailto:design@stefano.nu">Struts</a> - som även finns på <a href="https://github.com/Steffestruts">Github</a> och <a href="https://codepen.io/steffestruts">Codepen</a></p>
     </section>
 </section>
